# semantix

./: Cargo.toml
src/: lib.rs
test/: example.cds  example.json
