[package]
name = "semantix"
version = "0.2.1"
edition = "2021"
authors = ["Dr. David Alexander Kunz <kunz.david.alexander@gmail.com>"]
license = "MIT"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
